<resources>

    <string name="app_name">Glowing Message Alert</string>
    <string name="app_link">https://play.google.com/store/apps/details?id=com.sublimis.glowmymind</string>
    
    <string name="copyright_part1">Glowing Message Alert&lt;br /&gt;Version: &lt;b&gt;%1$s&lt;/b&gt; (%2$s)</string>
    <string name="copyright_part2">
        © 2014 Sublimis Solutions\n\n
        Briefly flash a bright screen or flashlight when SMS or MMS is received.\n
        Very useful in quiet or dark environments, even when the phone is out of direct sight.\n\n
        <a href="https://play.google.com/store/apps/details?id=com.sublimis.glowmymind">Rate and comment</a>\nTell us what you think\n\n
        <a href="https://play.google.com/store/apps/developer?id=Sublimis+Solutions">More applications</a>\nTake a look at our other apps
    </string>
    
    <string name="pref_category1_title">Application</string>
    <string name="pref_category2_title">Screen glow</string>
    <string name="pref_category3_title">Flashlight glow</string>
    <string name="pref_category4_title">Intensity</string>
    
    <string name="pref_enabled_key">Enable</string>
    <string name="pref_screen_key">Screen</string>
    <string name="pref_screenstate_key">ScreenState</string>
    <string name="pref_proximity_key">Proximity</string>
    <string name="pref_obscuredflash_key">ObscuredFlash</string>
    <string name="pref_flashlight_key">Flashlight</string>
    <string name="pref_duration_key">Duration</string>
    
    <string name="pref_enabled_title">Enable</string>
    <string name="pref_enabled_summary"></string>
    
    <string name="pref_screen_title">Enable</string>
    <string name="pref_screen_summary">Use screen for glowing</string>
    
    <string name="pref_screenstate_title">Only when turned off</string>
    <string name="pref_screenstate_summary">Glow only when phone is not being used</string>
    
    <string name="pref_proximity_title">Only when not obscured</string>
    <string name="pref_proximity_summary">Glow only when proximity sensor tells that screen is not obscured</string>
    
    <string name="pref_obscuredflash_title">Glow flashlight if obscured</string>
    <string name="pref_obscuredflash_summary">Glow with camera flashlight if screen is obscured</string>
    
    <string name="pref_flashlight_title">Enable</string>
    <string name="pref_flashlight_summary">Use camera flashlight for glowing (always)</string>
    
    <string name="pref_duration_title">Glow duration</string>
    <string name="pref_duration_summary"></string>
    
    <string name="pref_test_title">Test</string>
    <string name="pref_test_summary">See how this looks like</string>
    
    <string name="optmenu_share_text">Share</string>
    <string name="optmenu_about_text">About</string>
    
    <string name="share_title">Send to</string>
    <string name="share_subject">@string/app_name</string>

    <string name="toast_app_disabled">App is disabled – nothing will happen!</string>
    <string name="toast_all_disabled">Both screen and flashlight glow are disabled – nothing will happen!</string>
    <string name="toast_screen_obscured">Proximity sensor says: Screen obscured – will not glow!</string>
    
</resources>
